# own-your-finances

./: LICENSE  Pipfile  README.md  firefly_api.py  mint-cleaner.py  pyproject.toml  transfer_solver.py  utils.py
