[project]
name = "own-your-finances"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "hvac>=2.3.0",
    "matplotlib>=3.10.3",
    "pandas>=2.3.1",
    "playwright==1.51.0",
    "requests>=2.32.4",
    "sentry-sdk>=2.32.0",
]
